test/tests/stages/9_functions/invalid_parse/fun_decl_for_loop.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[22]:
  int
  identifier(main)
  (
  void
  )
  {
  for
  (
  int
  identifier(f)
  (
  void
  )
  ;
  ;
  )
  {
  return
  const int(0)
  ;
  }
  }
